--- a/GlucoMan.Maui/InjectionsPage.xaml
+++ b/GlucoMan.Maui/InjectionsPage.xaml
@@ -9,48 +9,49 @@
               Auto,Auto,Auto,Auto,*"
               ColumnDefinitions="*,*,*,*">
             <Button Grid.Row="1" Grid.Column="0" Text="Front" x:Name="btnFront" Margin="1"
-                ToolTipProperties.Text="Opens a new Front injections' picture page"
+                ToolTipProperties.Text="Front: opens a new Front injections' picture page"
                     TextColor="Black"
                 Clicked="btnFront_ClickedAsync"/>
             <Button Grid.Row="1" Grid.Column="1" Text="Back" x:Name="btnBack" Margin="1"
                     TextColor="Black"
-                    ToolTipProperties.Text="Opens a new Back injections' picture page"
+                    ToolTipProperties.Text="Back: opens a new Back injections' picture page"
                     Clicked="btnBack_Clicked_Async"/>
             <Button Grid.Row="1" Grid.Column="2" Text="Hands" x:Name="btnHands" Margin="1"
                     TextColor="Black"
-                    ToolTipProperties.Text="Opens a new Hands blood samples' positions picture page"
+                    ToolTipProperties.Text="Hands: opens a new Hands blood samples' positions picture page"
                     Clicked="btnHands_ClickedAsync"/>
-            <Button Grid.Row="1" Grid.Column="3" Text="Sensrs" x:Name="btnSensors" Margin="1"
+            <Button Grid.Row="1" Grid.Column="3" Text="Sensor" x:Name="btnSensors" Margin="1"
                     TextColor="Black"
-                    ToolTipProperties.Text="Opens a new Sensors positions' picture page"
+                    ToolTipProperties.Text="Sensors: opens a new Sensors positions' picture page"
                     Clicked="btnSensors_Clicked_Async"/>
             
             <CheckBox Grid.Row="0" Grid.Column="0" HorizontalOptions="Center"
                       x:Name ="chkFront" CheckedChanged="chkChanged" IsChecked="False" 
-                      ToolTipProperties.Text="Add to the list the injections made in the Front zone"/>
+                      ToolTipProperties.Text="Filter front: adds to the list the injections made in the Front zone"/>
             <CheckBox Grid.Row="0" Grid.Column="1" HorizontalOptions="Center"
                       x:Name ="chkBack" CheckedChanged="chkChanged" IsChecked="False"
-                      ToolTipProperties.Text="Add to the list the injections made in the Back zone"/>
+                      ToolTipProperties.Text="Filter back: adds to the list the injections made in the Back zone"/>
             <CheckBox Grid.Row="0" Grid.Column="2" HorizontalOptions="Center"
                       x:Name ="chkHands" CheckedChanged="chkChanged" IsChecked="False" 
-                      ToolTipProperties.Text="Add to the list the blood sampling punctures"/>
+                      ToolTipProperties.Text="Filter hands: adds to the list the blood sampling punctures"/>
             <CheckBox Grid.Row="0" Grid.Column="3" HorizontalOptions="Center"
                       x:Name ="chkSensors" CheckedChanged="chkChanged" IsChecked="False"
-                      ToolTipProperties.Text="Add to the list the sensors installed"/>
+                      ToolTipProperties.Text="Filter sensor: adds to the list the sensors installed"/>
 
             <Label Grid.Row="2" Grid.Column="0" Text="Actual Insulin [U]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <!--<Label Grid.Row="2" Grid.Column="1" Text="Calculated insul. [U]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>-->
             <Label Grid.Row="2" Grid.Column="2" Text="Id" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
 
             <Entry Grid.Row="3" Grid.Column="0" x:Name="txtInsulinActual" 
-                   ToolTipProperties.Text="Insulin actually injected"
+                   ToolTipProperties.Text="Bolus: insulin actually injected"
                    Keyboard="Numeric" HorizontalTextAlignment="End"
                    BackgroundColor="PaleGreen" TextColor="Black"
                    FontSize="Medium" />
             <Entry Grid.Row="3" Grid.Column="1" x:Name="txtInsulinCalculated" 
-                   ToolTipProperties.Text="Insulin bolus calculated by this program (currently not used)"
+                   ToolTipProperties.Text="Calculated: insulin bolus calculated by this program (currently not used)"
                    Keyboard="Numeric" BackgroundColor="White" HorizontalTextAlignment="End"
-                   FontSize="Medium" />
+                   FontSize="Medium"
+                   IsVisible="False"/>
             <Entry Grid.Row="3" Grid.Column="2" x:Name="txtIdInjection" BackgroundColor="White" 
                     ToolTipProperties.Text="Code of this injection"
                     FontSize="Medium" HorizontalTextAlignment="Center" IsReadOnly="true"/>
@@ -63,18 +64,21 @@
                    HorizontalTextAlignment="Start" VerticalTextAlignment="Center"/>
             <RadioButton Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="1" 
                          x:Name="rdbShortInsulin" Content="Short ins." HorizontalOptions="Center"
+                         ToolTipProperties.Text="Short acting insulin when chosen"
                          GroupName="groupInsulin" WidthRequest="180" />
             <RadioButton Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="1" Content="Slow ins." 
                          HorizontalOptions="Center"
+                         ToolTipProperties.Text="Long acting insulin when chosen"
                          x:Name="rdbLongInsulin" GroupName="groupInsulin" WidthRequest="180"/>
 
             <DatePicker Grid.Row="5" Grid.Column="0" x:Name="dtpInjectionDate" 
-                    ToolTipProperties.Text="Date of this injection"
+                    ToolTipProperties.Text="Date: date of this injection"
                     BackgroundColor="PaleGreen" TextColor="Black" 
                     HorizontalOptions="Center" />
             <TimePicker Grid.Row="5" Grid.Column="1" x:Name="dtpInjectionTime" 
-                    ToolTipProperties.Text="Date of this injection"
+                    ToolTipProperties.Text="Time: time of this injection"
                     BackgroundColor="PaleGreen" TextColor="Black"
+                    Format="HH:mm:ss"
                     HorizontalOptions="Center" />
             <Button Grid.Row="5" Grid.Column="2" 
                     ImageSource="clock.png"
@@ -97,7 +101,9 @@
             </Grid>
             
             <HorizontalStackLayout Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="3">
-                <CheckBox VerticalOptions="Center" x:Name="chkNowInAdd" IsChecked="True">
+                <CheckBox VerticalOptions="Center" x:Name="chkNowInAdd" IsChecked="True"
+                    ToolTipProperties.Text="Manual/Automatic time: when checked sets 'now' as the time of a new event"
+                          >
                     <CheckBox.Margin>
                         <OnPlatform x:TypeArguments="Thickness">
                             <On Platform="iOS" Value="0,-10,0,0" />
@@ -105,7 +111,10 @@
                         </OnPlatform>
                     </CheckBox.Margin>
                 </CheckBox>
-                <Label VerticalTextAlignment="Start" VerticalOptions="Center" Text="Add with Now as time">
+                <Label VerticalTextAlignment="Start" VerticalOptions="Center" 
+                       Text="Add with Now as time"
+                       ToolTipProperties.Text="Manual/Automatic time: when not checked uses the time shown as the time of a new event"
+                       >
                     <Label.GestureRecognizers>
                         <TapGestureRecognizer>
 
@@ -116,7 +125,7 @@
 
             <Entry Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtNotes" 
                    BackgroundColor="PaleGreen" TextColor="Black"
-                    ToolTipProperties.Text="Notes about this injection"
+                   ToolTipProperties.Text="Notes: notes about this injection"
                    FontSize="Small" HorizontalTextAlignment="Start" IsReadOnly="false"/>
 
             <Label Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4" Text="Injections" FontAttributes="Bold"
