--- a/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
+++ b/GlucoMan.Maui/GlucoseMeasurementsPage.xaml
@@ -25,6 +25,7 @@
             <TimePicker Grid.Row="1" Grid.Column="2" x:Name="dtpEventTime" 
                         BackgroundColor="PaleGreen" TextColor="Black"
                         HorizontalOptions="Center" VerticalOptions="Center" Margin="1"
+                        Format="HH:mm:ss"
                         ToolTipProperties.Text="Time of measurement of glucose"/>
             <Label Grid.Row="1" Grid.Column="3" x:Name="txtIdGlucoseRecord" Text=""
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
