--- a/GlucoMan.Maui/HypoPredictionPage.xaml
+++ b/GlucoMan.Maui/HypoPredictionPage.xaml
@@ -5,20 +5,24 @@
              Title="Hypoglicemia time prediction">
     <ContentPage.Content>
         <!--RowDefinitions="55,55,20,20,70,70,50,20,50,20,50,50,20,50,40"-->
-        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,30,Auto,Auto,Auto" 
+        <ScrollView>
+            <Grid RowDefinitions="Auto,
+              Auto,Auto,Auto,Auto,Auto,
+              Auto,Auto,Auto,Auto,Auto,
+              27,Auto,Auto,Auto" 
               ColumnDefinitions="*,*,*,*">
 
             <Button Grid.Row="0" Grid.Column="0" Text="Now" Margin="1"
-                    ToolTipProperties.Text="Copies the current day and time to the date of the current glucose measurement"
+                    ToolTipProperties.Text="Enter Now time: copies the current day and time to the date of the current glucose measurement"
                     Clicked="btnNow_Click"/>
             <Button Grid.Row="0" Grid.Column="1" Margin="1"
-                    ToolTipProperties.Text="Moves the current glucose measurement into the previous and copies current time instant in latest glucose measurement"
+                    ToolTipProperties.Text="Enter the next glucose measurement: moves the current glucose measurement into the previous and copies time now in latest glucose measurement"
                     Clicked="btnNext_Click" Text="Next"/>
             <Button Grid.Row="0" Grid.Column="2" Margin="1"
-                    ToolTipProperties.Text="Reads the last two glucose measurements from the database"
-                    Clicked="btnReadGlucose_Click" Text="Read g."/>
+                    ToolTipProperties.Text="Read: reads the last two glucose measurements from the database"
+                    Clicked="btnReadGlucose_Click" Text="Read gl."/>
             <Button Grid.Row="0" Grid.Column="3" Margin="1"
-                    ToolTipProperties.Text="Predicts the time at which the glucose will reach the value for alarm (prediction by linear extrapolation, applies only into VERY STRICT conditions))"
+                    ToolTipProperties.Text="Predict: predicts the time at which the glucose will reach the value for alarm (prediction by linear extrapolation, applies only into VERY STRICT conditions))"
                     Clicked="btnPredict_Click" Text="Predict"/>
 
             <Label Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Text="Glucose for alarm" 
@@ -26,13 +30,13 @@
             <Label Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="1" Text="Alarm advance time [min]" 
                     HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
             <Entry Grid.Row="1" Grid.Column="0" x:Name="txtGlucoseTarget" Text="80" FontSize="Medium"
-                   ToolTipProperties.Text="Low glucose at which we want to take action against hypoglicemia"
+                   ToolTipProperties.Text="Alarm value: low glucose at which we want to take action against hypoglicemia"
                    Keyboard="Numeric" HorizontalTextAlignment="End" 
                    BackgroundColor="PaleGoldenrod" TextColor="Black"
                    IsEnabled="true"/>
             <Entry Grid.Row="1" Grid.Column="2" x:Name="txtAlarmAdvanceTime" Text="80" 
                    FontSize="Medium"
-                   ToolTipProperties.Text="Time of anticipated alarm [min]"
+                   ToolTipProperties.Text="Time advance: time of anticipated alarm, with respect to the alarm value time [min]"
                    Keyboard="Numeric" HorizontalTextAlignment="End" 
                    BackgroundColor="DarkSeaGreen" TextColor="White"
                    IsEnabled="true"/>
@@ -75,7 +79,7 @@
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
 
             <Label Grid.Row="6" Grid.Column="1" x:Name="txtGlucoseSlope" Text="----" FontSize="Large"
-                   ToolTipProperties.Text="Rate of change of glucose (glucose units per hour)"
+                   ToolTipProperties.Text="Slope: rate of change of glucose [glucose units/hour]"
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center" 
                    BackgroundColor="LightGray" TextColor="Black"/>
             <Label Grid.Row="6" Grid.Column="2" Text="Slope&#10;[gluc/h]" 
@@ -134,6 +138,7 @@
                 <DatePicker  x:Name="dtpTimeFutureDate" BackgroundColor="White" TextColor="Black"
                         IsEnabled="False" HorizontalOptions="Center"/>
                 <TimePicker x:Name="dtpTimeFutureTime" BackgroundColor="White" TextColor="Black"
+                        Format="HH:mm:ss"
                         IsEnabled="False" HorizontalOptions="Center" />
             </HorizontalStackLayout>
 
@@ -142,5 +147,6 @@
                    Keyboard="Numeric" HorizontalTextAlignment ="End" 
                    BackgroundColor="SkyBlue" TextColor="Black"/>
         </Grid>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
