--- a/GlucoMan.Maui/MainPage.xaml
+++ b/GlucoMan.Maui/MainPage.xaml
@@ -9,32 +9,32 @@
                 ImageSource="glucometer.png"
                 Grid.Row="0" Grid.Column="0" 
                 Clicked="btnGlucoseMeasurement_Clicked"
-                Margin="1" ToolTipProperties.Text="Opens the page of glucose measurement events"/>
+                Margin="1" ToolTipProperties.Text="Blood glucose: opens the page of glucose measurement events"/>
         <!--Text="Glucose"-->
         <Button x:Name="btnInjections" 
                 ImageSource="syringe.png"
                 Grid.Row="0" Grid.Column="1" 
                 Clicked="btnInjections_Clicked" IsEnabled="True" Margin="1"
-                ToolTipProperties.Text="Opens the page of past and present injections"/>
+                ToolTipProperties.Text="Injections: Opens the page of past and present injections"/>
         <!--Text="Injections"-->
         <Button x:Name="btnMeals" 
                 ImageSource="meals.png"
                 Grid.Row="1" Grid.Column="0" 
                 Clicked="btnMeals_Clicked" IsEnabled="True"
-                Margin="1" ToolTipProperties.Text="Opens the page of meals done in the past"/>
+                Margin="1" ToolTipProperties.Text="Meals: opens the page of meals done in the past"/>
         <!--Text="Meals"-->
         <Button x:Name="btnNewMeal" 
                 ImageSource="meal.png"
                 Grid.Row="1" Grid.Column="1" 
                 Clicked="btnNewMeal_Clicked" IsEnabled="True"
-                Margin="1" ToolTipProperties.Text="Opens a new meal page"/>
+                Margin="1" ToolTipProperties.Text="Meal: opens a new meal page"/>
         <!--Text="New meal"-->
 
         <Button x:Name="btnInsulinCalc" 
                 Grid.Row="2" Grid.Column="0" 
                 ImageSource="calculate_insulin.png"
                 Clicked="btnInsulinCalc_Clicked" LineBreakMode="WordWrap" 
-                Margin="1" ToolTipProperties.Text="Opens a page that calculates the quantity of insulin to inject before a meal"/>
+                Margin="1" ToolTipProperties.Text="Insulin calculation: opens a page that calculates the quantity of insulin to inject before a meal"/>
         <!--Text="Calculate&#10; insulin"-->
         <!--<Button Text="????"
                 Grid.Row="2" Grid.Column="1" 
@@ -45,53 +45,55 @@
                 Grid.Row="3" Grid.Column="0"
                 ImageSource="foods.png"
                 Clicked="btnFoods_Clicked" IsEnabled="True"
-                Margin="1" ToolTipProperties.Text="Opens the page for foods management"></Button>
+                Margin="1" ToolTipProperties.Text="Foods: opens the page for foods management"></Button>
         <!--Text="Foods"-->
         <Button x:Name="btnRecipes" 
                 ImageSource="recipe.png"
                 Grid.Row="3" Grid.Column="1" 
                 Clicked="btnRecipes_Clicked" 
-                Margin="1" ToolTipProperties.Text="Opens the page of recipes' management" IsEnabled="True"/>
+                Margin="1" ToolTipProperties.Text="Recipes: opens the page of recipes' management" IsEnabled="True"/>
         <!--Text="Recipes"-->
         <Button x:Name="btnFoodToHitTargetCarbs" 
                 ImageSource="food_to_sugar.png"
                 LineBreakMode="WordWrap"
                 Grid.Row="4" Grid.Column="0" 
                 Clicked="btnFoodToHitTargetCarbs_Clicked"
-                Margin="1" ToolTipProperties.Text="Opens the page that calculates the food one need to eat to hit a carbohydrates target"/>
+                Margin="1" ToolTipProperties.Text="Food to hit Target: Opens the page that calculates the food one need to eat to hit a carbohydrates target"/>
         <!--Text="Food to reach &#10;  target carbs"-->
         <Button x:Name="btnHypoPrediction" 
                 ImageSource="prediction.png"
                 LineBreakMode="WordWrap"
                 Grid.Row="4" Grid.Column="1" 
                 Clicked="btnHypoPrediction_Clicked"
-                Margin="1" ToolTipProperties.Text="Opens the page that makes a simple prediction of the time of an hypoglicemia episode"/>
+                Margin="1" ToolTipProperties.Text="Prediction: opens the page that makes a simple prediction of the time of an hypoglicemia episode"/>
         <!--Text="Hypoglicemia&#10;time prediction"-->
         <Button x:Name="btnMiscellaneousFunctions" 
                 ImageSource="other.png"
                 LineBreakMode="WordWrap"
                 Grid.Row="5" Grid.Column="0" 
                 Clicked="btnMiscellaneousFunctions_Clicked" 
-                Margin="1" ToolTipProperties.Text="Opens the page of miscellaneous functions"/>
+                Margin="1" ToolTipProperties.Text="Miscellaneous: opens the page of miscellaneous functions"/>
         <!--Text="Miscellaneous&#10;   functions"-->
         <Button x:Name="btnAlarms" 
                 Text="Alarms"
                 Grid.Row="5" Grid.Column="1" 
-                IsEnabled="False" Clicked="btnAlarms_Clicked" 
+                IsVisible="True" IsEnabled="False" 
+                Clicked="btnAlarms_Clicked" 
                 Background="Grey"
-                Margin="1" ToolTipProperties.Text="Opens the page of the alarms' settings"/>
+                Margin="1" ToolTipProperties.Text="Alarms: opens the page of the alarms' settings"/>
         <Button x:Name="btnConfigurations" 
                 ImageSource="gear.png"
                 Grid.Row="6" Grid.Column="0" 
                 Clicked="btnConfigurations_Clicked" 
-                ToolTipProperties.Text="Configurations of program's parameters"
-                Margin="1"/>
+                ToolTipProperties.Text="Configurations: assignment of program's parameters"
+                Margin="1"
+                />
         <!--Text="Configure"-->
         <Button x:Name="btnAbout" 
                 ImageSource="questionmark.png"
                 Grid.Row="6" Grid.Column="1" 
                 Clicked="btnAbout_Clicked"
-                Margin="1" ToolTipProperties.Text="Opens the page of information about this program"/>
+                Margin="1" ToolTipProperties.Text="About: opens the page of information about this program"/>
         <!--Text="About"-->
     </Grid>
 </ContentPage>
